//option cc_generic_services = true; //此选项置为true，protobuf会生成服务接口定义
package pack.test;
 
message EchoRequest{
  required string message = 1;
  message Nested_Message {
      optional string message = 1;
  }
  optional Nested_Message nested_message = 2;
}

message EchoResponse{
  required string message = 1;
}
  
//service EchoService{
//  rpc Echo(EchoRequest) returns (EchoResponse);
//};
